# GeneratingPoints

./: CMakeLists.txt  README.md
sourse/: DisplayPoint.cpp  DisplayPoint.h  Generator.cpp  Generator.h  MainWindow.cpp  MainWindow.h  main.cpp
